--- a/FutureView/Podfile
+++ b/FutureView/Podfile
@@ -1,11 +1,11 @@
 # Uncomment the next line to define a global platform for your project
 # platform :ios, '9.0'
 
-target 'FutureView' do
+target 'ViewModel' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
 
-  # Pods for FutureView
+  # Pods for ViewModel
     pod 'YogaKit', :git => 'https://github.com/GSukh/yoga.git', :commit => '9918b4fd76ed53f20e1254373ada1fb64b209bbf'
 
 end
